--- a/client/app/views/operation/operation.html
+++ b/client/app/views/operation/operation.html
@@ -19,7 +19,7 @@
 
   <div class="col-md-12 vert-offset-top-2 vert-offset-bottom-6">
     <div class="col-md-12 animate">
-      <operation-response-obje ng-show="check_selected == 1" distrib="distrib"></operation-response-obje>
+      <operation-response-obje ng-if="check_selected == 1" distrib="distrib"></operation-response-obje>
     </div>
   </div>
 
