Se añade el soporte a ficheros AREVAC en el componente CheckObjesWithoutAnswer

--- a/client/app/components/checkObjesWithoutAnswer/view.html
+++ b/client/app/components/checkObjesWithoutAnswer/view.html
@@ -32,7 +32,7 @@
               </div>
             </td>
             <td style="vertical-align: middle;" title="'Cod.Tipo'" filter="{'codTipoPunto': 'number'}" sortable="'codTipoPunto'">
-              {{obje.codTipoPunto}} {{obje.checked}}
+              {{obje.codTipoPunto}}
             </td>
             <td style="vertical-align: middle;" title="'Motivo'" filter="{'motivo': 'text'}" sortable="'motivo'">
               {{obje.motivo}}
