--- a/client/app/components/checkObjesWithoutAnswer/view.html
+++ b/client/app/components/checkObjesWithoutAnswer/view.html
@@ -3,7 +3,7 @@
   <div class="panel-body">
     <div class="col-md-1">
       <label>Año</label>
-      <select class="form-control" ng-model="$ctrl.selected_year" ng-options="month for month in $ctrl.years" ng-change="$ctrl.changePeriod()"></select>
+      <select class="form-control" ng-model="$ctrl.selected_year" ng-options="year for year in $ctrl.years" ng-change="$ctrl.changePeriod()"></select>
     </div>
     <div class="col-md-1">
       <label>Mes</label>
