--- a/client/app/views/check/check.html
+++ b/client/app/views/check/check.html
@@ -14,9 +14,10 @@
     <div class="btn-group col-md-8">
       <button class="btn btn-default" ng-click="check_selected = 1">Objeciones</button>
       <button class="btn btn-default" ng-click="check_selected = 2">CUPS por agregación</button>
-      <button class="btn btn-default" ng-click="check_selected = 3">Agregaciones de alta sin medida</button>
-      <button class="btn btn-default" ng-click="check_selected = 4">Medidas por agregación</button>
-      <button class="btn btn-default" ng-click="check_selected = 5">Objeciones sin respuesta</button>
+      <button class="btn btn-default" ng-click="check_selected = 3">Inventario de CUPS</button>
+      <button class="btn btn-default" ng-click="check_selected = 4">Agregaciones de alta sin medida</button>
+      <button class="btn btn-default" ng-click="check_selected = 5">Medidas por agregación</button>
+      <button class="btn btn-default" ng-click="check_selected = 6">Objeciones sin respuesta</button>
     </div>
   </div>
 
@@ -25,9 +26,10 @@
     <div class="col-md-12 animate">
       <check-objes ng-if="check_selected == 1" distrib="distrib"></check-objes>
       <check-agcl ng-if="check_selected == 2" distrib="distrib"></check-agcl>
-      <check-ags-without-measure ng-if="check_selected == 3" distrib="distrib"></check-ags-without-measure>
-      <check-ags-measure ng-if="check_selected == 4" distrib="distrib"></check-ags-measure>
-      <check-objes-without-answer ng-if="check_selected == 5" distrib="distrib"></check-objes-without-answer>
+      <check-cups-inventory ng-if="check_selected == 3" distrib="distrib"></check-cups-inventory>
+      <check-ags-without-measure ng-if="check_selected == 4" distrib="distrib"></check-ags-without-measure>
+      <check-ags-measure ng-if="check_selected == 5" distrib="distrib"></check-ags-measure>
+      <check-objes-without-answer ng-if="check_selected == 6" distrib="distrib"></check-objes-without-answer>
 
     </div>
   </div>
