- Se añade filtrado de agregaciones divergentes pero viejas - Se incluye el seteado de las fechas en BD - Se corrigen diversos bugs

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -97,6 +97,10 @@ body {
   color: white;
 }
 
+.lightgray {
+  background: lightgray;
+}
+
 .red, .red a{
   background-color: red;
   color: white;
