--- a/client/app/components/checkAgclDivergence/view.html
+++ b/client/app/components/checkAgclDivergence/view.html
@@ -5,10 +5,18 @@
       <label>Archivo CSV de inventario del SIMEL</label>
       <input class="form-control" id="file" type="file" />
     </div>
-    <div class="col-md-1">
+    <div class="col-md-1 col-sm-2">
       <label>Operaciones</label>
       <button class="btn btn-block btn-primary" ng-click="$ctrl.compare()">Comparar</button>
     </div>
+    <div class="col-md-1 col-sm-2">
+      <label>Agre. viejas</label>
+      <button class="btn btn-block btn-primary" ng-disabled="!$ctrl.resultsLoaded" ng-click="$ctrl.filterOldAggregations()">
+        <span ng-if="!$ctrl.filteringOldAggregations">Filtrar</span>
+        <span ng-if="$ctrl.filteringOldAggregations">Quitar filtro</span>
+      </button>
+    </div>
+
   </div>
 </div>
 
@@ -37,8 +45,16 @@
               {{content.endDateSimel}}
             </td>
             <td class="text-center" style="vertical-align: middle; " title="'Corregir CS'">
-              <button ng-if="!content.valid && content.startDateSimel" class="green">A</button>
-              <button ng-if="!content.valid && content.endDateSimel" class="red">B</button>
+              <button ng-if="!content.valid && content.startDateSimel" ng-click="$ctrl.changeCsStartDate(content)"
+                  ng-disabled="!content.startDateCs || content.startDateCs === content.startDateSimel"
+                  ng-class="{'lightgray': !content.startDateCs || content.startDateCs === content.startDateSimel, 'green': content.startDateCs && content.startDateCs !== content.startDateSimel}">
+                A
+              </button>
+              <button ng-if="!content.valid && content.endDateSimel" ng-click="$ctrl.changeCsEndDate(content)"
+                  ng-disabled="!content.endDateCs || content.endDateCs === content.endDateSimel"
+                  ng-class="{'lightgray': !content.endDateCs || content.endDateCs === content.endDateSimel, 'red': content.endDateCs && content.endDateCs !== content.endDateSimel}">
+                B
+              </button>
             </td>
           </tr>
         </table>
